objects/BICE_Solicitud_Cliente__c.object
<CustomObject>
    <description>Ficha Solicitud de Clientes Utilizada por Banca Inersiones.</description>
    <fields>
        <fullName>AUM__c</fullName>
        <label>AUM (MM$)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountSource__c</fullName>
        <label>Account Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business intelligence</fullName>
                </value>
                <value>
                    <fullName>Banca Personas</fullName>
                </value>
                <value>
                    <fullName>Banca Personas Fuerza de Venta</fullName>
                </value>
                <value>
                    <fullName>Banca Inversiones</fullName>
                </value>
                <value>
                    <fullName>Banca Empresas y Corporaciones</fullName>
                </value>
                <value>
                    <fullName>Banca Privada</fullName>
                </value>
                <value>
                    <fullName>Sucursales</fullName>
                </value>
                <value>
                    <fullName>Ejecutivos AP</fullName>
                </value>
                <value>
                    <fullName>Red Personal Ejecutivo</fullName>
                </value>
                <value>
                    <fullName>Red Extendida Ejecutivo</fullName>
                </value>
                <value>
                    <fullName>Redes Sociales (LinkedIn, Facebook)</fullName>
                </value>
                <value>
                    <fullName>Referido Cliente</fullName>
                </value>
                <value>
                    <fullName>Base de Datos Interna</fullName>
                </value>
                <value>
                    <fullName>Eventos BICE</fullName>
                </value>
                <value>
                    <fullName>Otros Eventos</fullName>
                </value>
                <value>
                    <fullName>Stand Universidades</fullName>
                </value>
                <value>
                    <fullName>Convenio Inmobiliario</fullName>
                </value>
                <value>
                    <fullName>Partner (Alianzas)</fullName>
                </value>
                <value>
                    <fullName>Referido BICE Banca Personas</fullName>
                </value>
                <value>
                    <fullName>Referido BICE Banca Empresas y Corporaciones</fullName>
                </value>
                <value>
                    <fullName>Referido BICE Inversiones</fullName>
                </value>
                <value>
                    <fullName>Referido BICE Otros</fullName>
                </value>
                <value>
                    <fullName>Base de Datos</fullName>
                </value>
                <value>
                    <fullName>Publicidad</fullName>
                </value>
                <value>
                    <fullName>Sitio Web BICE</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actividad_Economica_SBIF__c</fullName>
        <label>Actividad Económica (SBIF)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sin definir</fullName>
                </value>
                <value>
                    <fullName>Adm. Pública y Defensa</fullName>
                </value>
                <value>
                    <fullName>Agricultura</fullName>
                </value>
                <value>
                    <fullName>Agricultura y Ganadería excepto Frutic.</fullName>
                </value>
                <value>
                    <fullName>Agroindustria</fullName>
                </value>
                <value>
                    <fullName>Alimentos, Bebidas y Tabaco</fullName>
                </value>
                <value>
                    <fullName>Bienes Inmuebles y Serv. Prest. a Empre.</fullName>
                </value>
                <value>
                    <fullName>Captación y Distribución de Agua</fullName>
                </value>
                <value>
                    <fullName>Celusosa y Papeles</fullName>
                </value>
                <value>
                    <fullName>Comercio al por Mayor</fullName>
                </value>
                <value>
                    <fullName>Comercio al por Menor</fullName>
                </value>
                <value>
                    <fullName>Comercio x Menor, Restaurantes y Hoteles</fullName>
                </value>
                <value>
                    <fullName>Comunicaciones</fullName>
                </value>
                <value>
                    <fullName>Construcción de otras obras</fullName>
                </value>
                <value>
                    <fullName>Construcción de Viviendas</fullName>
                </value>
                <value>
                    <fullName>Construcciones no residenciales</fullName>
                </value>
                <value>
                    <fullName>Construcciones residenciales</fullName>
                </value>
                <value>
                    <fullName>Crédito de consumo</fullName>
                </value>
                <value>
                    <fullName>Crédito hipotecario para la vivienda</fullName>
                </value>
                <value>
                    <fullName>Cuero y Calzado</fullName>
                </value>
                <value>
                    <fullName>Cultivo de Salmones y Truchas</fullName>
                </value>
                <value>
                    <fullName>Distribución y Comercialización de Bebidas Alcohólicas</fullName>
                </value>
                <value>
                    <fullName>Diversión y Esparcimiento</fullName>
                </value>
                <value>
                    <fullName>Electricidad, Gas y Agua</fullName>
                </value>
                <value>
                    <fullName>Electricidad, Gas y Vapor</fullName>
                </value>
                <value>
                    <fullName>Estab. Financieros y de Seguros</fullName>
                </value>
                <value>
                    <fullName>Explotación de Bosques</fullName>
                </value>
                <value>
                    <fullName>Explotación de Minas y Canteras</fullName>
                </value>
                <value>
                    <fullName>Fab. Prod. Mineros, Metálicos y No Metálicos</fullName>
                </value>
                <value>
                    <fullName>Fruticultura</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apartment__c</fullName>
        <label>Apartment</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apellido_Materno_Conyuge__c</fullName>
        <label>Apellido Materno Cónyuge</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apellido_Materno__c</fullName>
        <description>Apellido Materno del Cliente persona natural (Viene de contact)</description>
        <label>Apellido Materno</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apellido_Paterno_Conyuge__c</fullName>
        <label>Apellido Paterno Cónyuge</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apellido_Paterno__c</fullName>
        <description>Apellido Paterno del Cliente persona natural (viene de last name de contacto)</description>
        <label>Apellido Paterno</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Atencion_diferencial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Atención diferencial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Autorizaci_n_de_informar_a_organismo_FAT__c</fullName>
        <label>Autorización de informar a organismo FAT</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCS_Circ_10672_10673_BCS__c</fullName>
        <label>BCS (Circ. 10672-10673 BCS)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BICE_Classification_del__c</fullName>
        <description>La Clasificacion BICE: solo es visible para Persona Jurídica.
(No confundir con Clasificación Comercial BICE Comercial_clasification__c que es para Personas Naturales).</description>
        <label>Clasificación BICE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BANCO E INSTITUCIONES FINANCIERAS</fullName>
                </value>
                <value>
                    <fullName>EMPRESAS PERSONALES</fullName>
                </value>
                <value>
                    <fullName>GRAN EMPRESA</fullName>
                </value>
                <value>
                    <fullName>INTERMEDIARIO DE VALORES</fullName>
                </value>
                <value>
                    <fullName>INVERSIONISTA INSTITUCIONAL</fullName>
                </value>
                <value>
                    <fullName>MEDIANA EMPRESA</fullName>
                </value>
                <value>
                    <fullName>MEGA EMPRESA</fullName>
                </value>
                <value>
                    <fullName>PERSONAS NATURALES</fullName>
                </value>
                <value>
                    <fullName>SOCIEDADES PRODUCTIVAS</fullName>
                </value>
                <value>
                    <fullName>SOCIEDAD DE INV.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Balances__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Balances</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Banco__c</fullName>
        <label>Banco</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 FIRST BANK</fullName>
                </value>
                <value>
                    <fullName>ABN AMRO BANK</fullName>
                </value>
                <value>
                    <fullName>ABN AMRO BANK (CHILE)</fullName>
                </value>
                <value>
                    <fullName>AMERICAN EXPRESS BANK</fullName>
                </value>
                <value>
                    <fullName>AMERICAN NATIONAL BANK</fullName>
                </value>
                <value>
                    <fullName>AMTRADE BANK</fullName>
                </value>
                <value>
                    <fullName>BAC FLORIDA BANK</fullName>
                </value>
                <value>
                    <fullName>BANCA COMMERCIALE ITALIANA</fullName>
                </value>
                <value>
                    <fullName>BANCO  INTERNACIONAL</fullName>
                </value>
                <value>
                    <fullName>BANCO ATLANTICO</fullName>
                </value>
                <value>
                    <fullName>BANCO BBVA</fullName>
                </value>
                <value>
                    <fullName>BANCO BICE</fullName>
                </value>
                <value>
                    <fullName>BANCO BILBAO VIZCAYA</fullName>
                </value>
                <value>
                    <fullName>BANCO CENTRAL DE CHILE</fullName>
                </value>
                <value>
                    <fullName>BANCO CONSORCIO</fullName>
                </value>
                <value>
                    <fullName>BANCO CREDITO INVERSIONES</fullName>
                </value>
                <value>
                    <fullName>BANCO DE CHILE</fullName>
                </value>
                <value>
                    <fullName>BANCO DE CHILE/EDWARDS-CITI</fullName>
                </value>
                <value>
                    <fullName>BANCO DE CREDITO E INVERSIONES</fullName>
                </value>
                <value>
                    <fullName>BANCO DEL DESARROLLO</fullName>
                </value>
                <value>
                    <fullName>BANCO DEL ESTADO DE CHILE</fullName>
                </value>
                <value>
                    <fullName>BANCO DO BRASIL</fullName>
                </value>
                <value>
                    <fullName>BANCO DO BRASIL S A</fullName>
                </value>
                <value>
                    <fullName>BANCO ECONOMICO</fullName>
                </value>
                <value>
                    <fullName>BANCO EDWARDS CITI</fullName>
                </value>
                <value>
                    <fullName>BANCO EXTERIOR DE ESPANA</fullName>
                </value>
                <value>
                    <fullName>BANCO EXTERIOR DE ESPAQA</fullName>
                </value>
                <value>
                    <fullName>BANCO FALABELLA</fullName>
                </value>
                <value>
                    <fullName>BANCO INTERNACIONAL</fullName>
                </value>
                <value>
                    <fullName>BANCO ITAÚ CHILE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calle_comercial_Inv__c</fullName>
        <label>Calle comercial Inv</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calle_comercial__c</fullName>
        <label>Calle comercial</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calle_particular_Inv__c</fullName>
        <label>Calle particular Inv</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calle_particular__c</fullName>
        <label>Calle particular</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campos_llenados__c</fullName>
        <description>Esta variable actúa sobre el paso 0 del proceso de aprobación y sobre el mensaje del sistema que indica si falta información por completar o no</description>
        <formula>OR(

    AND( 
											RecordType.Name = &apos;Solicitud Cliente Inversiones Persona Natural&apos;, 
											NOT(ISBLANK( New_Nombre__c)),
											NOT(ISBLANK(New_Apellido_Paterno__c)),
							  		NOT(ISBLANK(New_Apellido_Materno__c)),
			  						NOT(ISPICKVAL(New_Nationality__c, &apos;&apos;)),
											NOT(ISBLANK(New_PersonBirthdate__c )),
							  	 NOT(	ISBLANK(New_Email_personal_Inv__c )),
							  		NOT(ISBLANK(New_Telefono_fijo_particular_Inv__c)),
										 NOT(ISBLANK(New_Celular_particular_Inv__c)),
							  		NOT(ISBLANK(New_Otro_telefono_particular_Inv__c)),
							  		NOT(ISBLANK(New_Calle_particular_Inv__c)),
  							  NOT(ISBLANK(New_Numero_calle_particular_Inv__c)),
			  						NOT(ISBLANK(New_Comuna_particular_Inv__c)),
							  		NOT(ISBLANK(New_Ciudad_o_Provincia_particular_Inv__c)),
							  		NOT(ISPICKVAL(New_Pais_particular_Inv__c,&apos;&apos;)),
							  		NOT(ISPICKVAL(New_Profession__c,&apos;&apos;)),
											NOT(ISPICKVAL(New_Situac_Laboral__c,&apos;&apos;)),
						  			NOT(ISPICKVAL(New_Estado_Civil__c,&apos;&apos;)),
					  				NOT(ISPICKVAL(New_Regimen_Conyugal__c,&apos;&apos;)),
					  				NOT(ISPICKVAL( New_Sex__c ,&apos;&apos;)),
							  		NOT(ISPICKVAL(New_Tipo_cuenta_DCV__c,&apos;&apos;)),
							  	 NOT(ISPICKVAL(New_Plantilla_Producto__c,&apos;&apos;)),
							  		NOT(ISPICKVAL(New_Modelo_facturaci_n__c,&apos;&apos;)),
					  				NOT(ISBLANK(Cliente__c))			  			
			    ),
				AND(
								   RecordType.Name = &apos;Solicitud Cliente Inversiones Persona Jurídica&apos;, 
											NOT(ISBLANK(New_Nombre_de_fantasia__c )),
  									NOT(ISBLANK(New_Raz_n_Social__c)),
							  		NOT(ISBLANK(New_Giro_Inv__c)),
  									NOT(ISBLANK(New_Telefono_fijo_comercial_Inv__c)),
  							  NOT(ISBLANK(New_Calle_comercial_Inv__c)),
  							  NOT(ISBLANK(New_Comuna_comercial_Inv__c)),
										 NOT(ISBLANK(New_Nombres__c)),
							  		NOT(ISBLANK(New_N_de_cuenta__c)),
							  	 NOT(ISPICKVAL(New_Tipo_cuenta_DCV__c,&apos;&apos;)),
							   	NOT(ISPICKVAL(New_Modalidad_de_operaci_n__c,&apos;&apos;)),
							  		NOT(ISPICKVAL(New_Tipo_perfil_comercial__c,&apos;&apos;)),
							  		NOT(ISPICKVAL(New_Plantilla_Producto__c,&apos;&apos;)),
								   NOT(ISPICKVAL(New_Plantilla_cobro__c,&apos;&apos;)),
							  		NOT(ISPICKVAL(New_Modelo_facturaci_n__c,&apos;&apos;))
								)
				)</formula>
        <label>Campos llenados</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cargo__c</fullName>
        <description>Viene de Contact para Cuentas Personas Naturales</description>
        <label>Cargo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apoderado</fullName>
                </value>
                <value>
                    <fullName>Sin definir</fullName>
                </value>
                <value>
                    <fullName>Decorador</fullName>
                </value>
                <value>
                    <fullName>Gerente General</fullName>
                </value>
                <value>
                    <fullName>Arquitecto</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Abogado</fullName>
                </value>
                <value>
                    <fullName>Periodista</fullName>
                </value>
                <value>
                    <fullName>Gerente de Relacione</fullName>
                </value>
                <value>
                    <fullName>Jefe de Relaciones P</fullName>
                </value>
                <value>
                    <fullName>Especialista de Rela</fullName>
                </value>
                <value>
                    <fullName>Representante de Ven</fullName>
                </value>
                <value>
                    <fullName>Fiscal</fullName>
                </value>
                <value>
                    <fullName>Abogado Jefe</fullName>
                </value>
                <value>
                    <fullName>Abogado Subjefe</fullName>
                </value>
                <value>
                    <fullName>Abogado Senior</fullName>
                </value>
                <value>
                    <fullName>Abogado Junior</fullName>
                </value>
                <value>
                    <fullName>Procurador</fullName>
                </value>
                <value>
                    <fullName>Gerente Contralorma</fullName>
                </value>
                <value>
                    <fullName>Asesor Tributario</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carpeta_comercial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Carpeta comercial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Carpeta_operativa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Carpeta operativa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Categoria_Deudor__c</fullName>
        <label>Categoría Deudor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sin definir</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Celular_Comercial_Inv__c</fullName>
        <label>Celular Comercial Inv</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Celular_particular_Inv__c</fullName>
        <label>Celular particular Inv</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Circ_57_2017_UAF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Circular 57 2017 UAF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ciudad_o_Provincia_comercial_Inv__c</fullName>
        <label>Ciudad o Provincia comercial Inv</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_o_Provincia_comercial__c</fullName>
        <label>Ciudad o Provincia comercial</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_o_Provincia_particular_Inv__c</fullName>
        <label>Ciudad o Provincia particular Inv</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_o_Provincia_particular__c</fullName>
        <label>Ciudad o Provincia particular</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clasificacion_de_Riesgo_SBIF__c</fullName>
        <description>La Clasificación de riesgo SBIF solo es visible para Persona Jurídica.</description>
        <label>Clasificación de Riesgo (SBIF)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>A3</fullName>
                </value>
                <value>
                    <fullName>A4</fullName>
                </value>
                <value>
                    <fullName>A5</fullName>
                </value>
                <value>
                    <fullName>A6</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>B3</fullName>
                </value>
                <value>
                    <fullName>B4</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>C4</fullName>
                </value>
                <value>
                    <fullName>C5</fullName>
                </value>
                <value>
                    <fullName>C6</fullName>
                </value>
                <value>
                    <fullName>GR</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clasificacion_submargenes__c</fullName>
        <label>Clasificación submárgenes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personas</fullName>
                </value>
                <value>
                    <fullName>Clientes Corporativos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_APV__c</fullName>
        <inlineHelpText>Es Cliente de Ahorro Previsional Voluntario (APV)?</inlineHelpText>
        <label>Cliente APV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_AP__c</fullName>
        <inlineHelpText>Cliente Altos Patrimonios con Cuentas no Administradas?</inlineHelpText>
        <label>Cliente AP Cuentas no Administradas</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_AP_con_Administraci_n_Cartera__c</fullName>
        <inlineHelpText>Cliente Altos Patrimonio con Administración de Cartera</inlineHelpText>
        <label>Cliente AP con Administración Cartera</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_ARE_s__c</fullName>
        <inlineHelpText>Es Cliente del Área de Referidos Externos (ARE&apos;s)</inlineHelpText>
        <label>Cliente ARE&apos;s</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_BIA__c</fullName>
        <label>Cliente BIA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_Banco__c</fullName>
        <label>Cliente Banco</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_Relacionado__c</fullName>
        <inlineHelpText>Es un Cliente Relacionado?</inlineHelpText>
        <label>Cliente Relacionado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>BICE_Solicitudes_Clientes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cliente_desde__c</fullName>
        <label>Cliente desde</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <label>Cluster</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo_resultado_compliance_tracker__c</fullName>
        <label>Código resultado compliance tracker</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commercial_Cellphone__c</fullName>
        <label>Teléfono móvil comercial</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Commercial_Classification__c</fullName>
        <label>Commercial Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>A3</fullName>
                </value>
                <value>
                    <fullName>A4</fullName>
                </value>
                <value>
                    <fullName>A5</fullName>
                </value>
                <value>
                    <fullName>A6</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>B3</fullName>
                </value>
                <value>
                    <fullName>B4</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>C4</fullName>
                </value>
                <value>
                    <fullName>C5</fullName>
                </value>
                <value>
                    <fullName>C6</fullName>
                </value>
                <value>
                    <fullName>GR</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commercial_FAX_Other__c</fullName>
        <description>Commercial FAX Other, used in customer creation form for &quot;Personas Naturales&quot; and &quot;Personas Jurídicas&quot;</description>
        <label>Commercial FAX Other</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Commercial_Landline__c</fullName>
        <description>Commercial Landline, used in customer creation form for &quot;Personas Naturales&quot; and &quot;Personas Jurídicas&quot;</description>
        <label>Commercial Landline</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Commercial_Phone_Other__c</fullName>
        <description>Commercial Phone Other, used in customer creation form for &quot;Personas Naturales&quot; and &quot;Personas Jurídicas&quot;</description>
        <label>Commercial Phone Other</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Comuna_comercial_Inv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comuna comercial Inv</label>
        <referenceTo>Comuna__c</referenceTo>
        <relationshipName>CuentasCC2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comuna_comercial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comuna comercial</label>
        <referenceTo>Comuna__c</referenceTo>
        <relationshipName>CuentasCC1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comuna_particular_Inv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comuna particular Inv</label>
        <referenceTo>Comuna__c</referenceTo>
        <relationshipName>CuentasCP2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comuna_particular__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comuna particular</label>
        <referenceTo>Comuna__c</referenceTo>
        <relationshipName>CuentasCP1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Copia_inscripcion_original__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copia inscripción original</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Crear_Cliente__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Al marcarlo, ejecutivo solicita la creación del cliente al área de creación de Clientes</description>
        <label>Crear Cliente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Legal_Person_Consumer__c</fullName>
        <label>Customer Legal Person Consumer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>null</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_type_other_rating_c__c</fullName>
        <label>Tipo de Cliente otra clasificación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gerencia Finanzas</fullName>
                </value>
                <value>
                    <fullName>Gerencia Comercial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DAI_de_la_Soc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DAI de la Soc.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DCV_Circ_190_SVS__c</fullName>
        <label>DCV (Circ. 190 SVS)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_as_para_vencimiento__c</fullName>
        <formula>Fecha_de_vencimiento_MAC__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Días para vencimiento</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>